<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/margin_small"
    android:paddingLeft="@dimen/margin_small"
    android:paddingRight="@dimen/margin_small"
    android:paddingTop="@dimen/margin_small"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/splash_background"
    tools:context="com.e2esp.fashioncentral.activities.SplashActivity" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        android:text="@string/motto"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/logo_pink" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_tiny"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginLeft="@dimen/margin_small"
            android:gravity="left"
            android:text="@string/splash_heading_1"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginRight="@dimen/margin_small"
            android:gravity="right"
            android:text="@string/splash_heading_2"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_tiny"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginLeft="@dimen/margin_small"
            android:gravity="left"
            android:text="@string/splash_heading_3"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginRight="@dimen/margin_small"
            android:gravity="right"
            android:text="@string/splash_heading_4"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_tiny"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginLeft="@dimen/margin_small"
            android:gravity="left"
            android:text="@string/splash_heading_5"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginRight="@dimen/margin_small"
            android:gravity="right"
            android:text="@string/splash_heading_6"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_tiny"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginLeft="@dimen/margin_small"
            android:gravity="left"
            android:text="@string/splash_heading_7"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginRight="@dimen/margin_small"
            android:gravity="right"
            android:text="@string/splash_heading_8"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_tiny"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginLeft="@dimen/margin_small"
            android:gravity="left"
            android:text="@string/splash_heading_9"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginRight="@dimen/margin_small"
            android:gravity="right"
            android:text="@string/splash_heading_10"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>
